--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "migrate_bounty": "daostack-migrate dao --prev-migration node_modules/@daostack/migration/migration.json --gasPrice 20 --params parameters/production-bounty-dao.json",
     "migrate_test": "daostack-migrate dao --prev-migration node_modules/@daostack/migration/migration.json --gasPrice 20 --params parameters/demo-parameters.json"
   },
   "repository": {
