--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/daostack/ETHDenver-DAO#readme",
   "dependencies": {
-    "@daostack/migration": "0.0.1-rc.40-v1"
+    "@daostack/migration": "0.0.1-rc.40-v1",
+    "dotenv": "^8.2.0"
   }
 }
